# discord-musicbot

./: README.md  musicbot.py  pyproject.toml  requirements.in  requirements.txt
musicbot/: __main__.py  _main.py  bot.py  commands.py  utils.py
